# agent-oriented-architecture

./: .gitignore  Cargo.toml  README.md
.beads/: interactions.jsonl  issues.jsonl  metadata.json
crates/aoa/: Cargo.toml
crates/aoa-audit/: Cargo.toml
crates/aoa-audit/src/: audit.rs  error.rs  lib.rs  observe.rs  planes.rs  punch.rs  report.rs  structure.rs  tier.rs
crates/aoa-audit/tests/: acceptance.rs
crates/aoa-bench/: Cargo.toml
crates/aoa-bench/src/: bridge.rs  error.rs  lib.rs  loader.rs  provenance.rs  task.rs
crates/aoa-bench/tests/: loader_test.rs
crates/aoa-bench/tests/fixtures/external-filelist-000/: instruction.md  metadata.json
crates/aoa-bench/tests/fixtures/external-filelist-000/tests/: ground_truth.json
crates/aoa-bench/tests/fixtures/external-toml-003/: instruction.md  task.toml
crates/aoa-bench/tests/fixtures/external-toml-003/tests/: ground_truth.json
crates/aoa-bench/tests/fixtures/native-consensus-001/: instruction.md  task.toml
crates/aoa-bench/tests/fixtures/native-consensus-001/tests/: ground_truth.json  ground_truth_ast.json
crates/aoa-bench/tests/fixtures/no-heldout-002/: instruction.md  task.toml
crates/aoa-bench/tests/fixtures/no-heldout-002/tests/: ground_truth.json
crates/aoa-bench/tests/fixtures/root-gt-004/: ground_truth.json  instruction.md  task.toml
crates/aoa-budget/: Cargo.toml
crates/aoa-budget/src/: budget.rs  closure.rs  error.rs  fix.rs  lib.rs  reference.rs  suppress.rs  tokenizer.rs
crates/aoa-budget/tests/: budget.rs
crates/aoa-budget/tests/fixtures/closure/: AGENTS.md
crates/aoa-budget/tests/fixtures/closure/rules/: README.md  deep.md
crates/aoa-budget/tests/fixtures/oversized/: big.md
crates/aoa-budget/tests/fixtures/scope/: AGENTS.md  changed.md  unchanged.md
crates/aoa-budget/tests/fixtures/suppress/: suppressed.md
crates/aoa-codeprobe-shim/: Cargo.toml
crates/aoa-codeprobe-shim/src/: error.rs  lib.rs  mapping.rs  parse.rs
crates/aoa-codeprobe-shim/tests/: fixture.rs
crates/aoa-codeprobe-shim/tests/fixtures/: agent_output.txt  agent_output_abstain.txt  agent_output_blocked_only.txt
crates/aoa-enforce/: Cargo.toml
crates/aoa-enforce/src/: lib.rs
crates/aoa-falsify/: Cargo.toml
crates/aoa-falsify/fixtures/: proceed_input.json
crates/aoa-falsify/src/: convention.rs  delta.rs  eligibility.rs  error.rs  lib.rs  report.rs  types.rs  verdict.rs
crates/aoa-falsify/tests/: falsify_test.rs
crates/aoa-gap/: Cargo.toml
crates/aoa-gap/src/: compare.rs  construct.rs  correlation.rs  error.rs  gap.rs  lib.rs  metric_link.rs  provenance.rs  run.rs
crates/aoa-gap/tests/: criteria.rs
crates/aoa-gap/tests/fixtures/: construct_validity_report.json
crates/aoa-lint/: Cargo.toml
crates/aoa-lint/src/: category.rs  error.rs  finding.rs  lib.rs  lint.rs  report.rs
crates/aoa-lint/src/detectors/: contradiction.rs  duplication.rs  mod.rs  overbroad_glob.rs  stale_reference.rs  verbosity.rs
crates/aoa-lint/tests/: lint.rs
crates/aoa-lint/tests/fixtures/tree/: AGENTS.md
crates/aoa-lint/tests/fixtures/tree/rules/: README.md
crates/aoa-migrate/: Cargo.toml
crates/aoa-migrate/assets/eslint/: README.md  eslint.config.mjs  package-lock.json  package.json
crates/aoa-migrate/src/: apply.rs  error.rs  fix.rs  imports.rs  lib.rs  plan.rs
crates/aoa-migrate/src/imports/: mod.rs  python.rs  rust.rs  typescript.rs
crates/aoa-migrate/tests/: acceptance.rs  imports.rs  imports_python.rs  imports_typescript.rs
crates/aoa-migrate/tests/common/: mod.rs
crates/aoa-policy/: Cargo.toml
crates/aoa-policy/src/: generate.rs  lib.rs
crates/aoa-recommend/: Cargo.toml
crates/aoa-recommend/src/: lib.rs
crates/aoa-scip-graph/: Cargo.toml
crates/aoa-scip-graph/src/: best_effort.rs  bounded.rs  error.rs  index.rs  lib.rs  scip.rs
crates/aoa-scip-graph/tests/: tiers.rs
crates/aoa-scip-graph/tests/fixtures/index/: index.scip.json
crates/aoa-scip-graph/tests/fixtures/repo/pkg/: auth.py  tokens.py
crates/aoa-trace/: Cargo.toml
crates/aoa-trace/schema/: trace.schema.json
crates/aoa-trace/src/: error.rs  lib.rs  model.rs  report.rs  span_type.rs  validate.rs
crates/aoa-trace/tests/: validation.rs
crates/aoa-trace/tests/fixtures/: invalid_schema.json  out_of_order.json  reconstructed.json  valid.json
crates/aoa/src/: cli.rs  forge.rs  main.rs  output.rs
crates/aoa/src/commands/: audit.rs  codeprobe.rs  enforce.rs  eval.rs  eval_run.rs  falsify.rs  falsify_build.rs  fsutil.rs  gap.rs  lint.rs  migrate.rs  mod.rs  observe.rs  policy.rs  r0b.rs  recommend.rs
crates/aoa/tests/: cli.rs
crates/aoa/tests/fixtures/: baseline.json  bias_warnings_malicious.json  build_meta_degraded.json  experiment_aggregate.json  falsify_input.json  invalid_trace.json  migrated.json  r0b_canary.json  valid_trace.json
crates/aoa/tests/fixtures/codeprobe_run/broken-no-scoring/: agent_output.txt
crates/aoa/tests/fixtures/codeprobe_run/external-filelist-000/: agent_output.txt  scoring.json
crates/aoa/tests/fixtures/codeprobe_run/native-consensus-001/: agent_output.txt  scoring.json
crates/aoa/tests/fixtures/codeprobe_tasks/external-filelist-000/: instruction.md  metadata.json
crates/aoa/tests/fixtures/codeprobe_tasks/external-filelist-000/tests/: ground_truth.json
crates/aoa/tests/fixtures/codeprobe_tasks/native-consensus-001/: divergence_report.json  instruction.md  task.toml
crates/aoa/tests/fixtures/codeprobe_tasks/native-consensus-001/tests/: ground_truth.json  ground_truth_ast.json
crates/aoa/tests/fixtures/experiment_smoke/: manifest.json
crates/aoa/tests/fixtures/experiment_smoke/seed1/harness_arm/native-consensus-001/: scoring.json
crates/aoa/tests/fixtures/experiment_smoke/seed1/repo_arm/native-consensus-001/: scoring.json
crates/aoa/tests/fixtures/r0b_run_baseline/external-filelist-000/: scoring.json
crates/aoa/tests/fixtures/r0b_run_migrated/native-consensus-001/: scoring.json
crates/aoa/tests/fixtures/r0b_tasks_unavailable/no-heldout-002/: instruction.md  task.toml
crates/aoa/tests/fixtures/r0b_tasks_unavailable/no-heldout-002/tests/: ground_truth.json
(+46 files in other folders)
