[package]
name = "aoa-budget"
description = "Context budget gate for the AOA Toolkit (transitive closure, dual tokenizer, ceiling enforcement)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tiktoken-rs = "0.12.0"
