[package]
name = "aoa-migrate"
description = "Safe, reproducible, oracle-blind, code-layer repo migrations: consumes the aoa-audit structure punch-list and applies CodeFix changes with dry-run preview and archive/rollback (the R0 repo-delta treatment)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
aoa-audit = { path = "../aoa-audit" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3.10.1"
