[package]
name = "aoa-trace"
description = "Trace-event substrate (OpenTelemetry-style spans) for the AOA Toolkit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
