[package]
name = "aoa"
description = "User-facing CLI for the AOA Toolkit: wires every Wave-0 subcommand to its library crate, with fail-loud forge adapters and human + JSON dual-register output"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "aoa"
path = "src/main.rs"

[dependencies]
aoa-trace = { path = "../aoa-trace" }
aoa-budget = { path = "../aoa-budget" }
aoa-lint = { path = "../aoa-lint" }
aoa-gap = { path = "../aoa-gap" }
aoa-audit = { path = "../aoa-audit" }
aoa-falsify = { path = "../aoa-falsify" }
aoa-metrics = { path = "../aoa-metrics" }
aoa-bench = { path = "../aoa-bench" }
aoa-scip-graph = { path = "../aoa-scip-graph" }
aoa-codeprobe-shim = { path = "../aoa-codeprobe-shim" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
clap = { version = "4.5.40", features = ["derive"] }
anyhow = "1.0.98"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.2"
tempfile = "3.10.1"
